prll NEWS -- history of user-visible changes.
=============================================

- prll_jobnr user-accessible variable to get the current job's number.


Version 0.6.1

- prll_seq user-accessible function, a simple substitute for seq.
- Simple locking: five locks are available to user functions.
- A helper function to assist splitting multiple arguments.


Version 0.6

- POSIX compatibility, tested with dash and FreeBSD sh.
- Quiet mode to suppress progress messages.
- bash no longer barfs the whole prll source code when suspending
  and resuming operation.
- Proper option parsing is used, so order of options is no longer
  important. Exceptions were added for the '-p' and '-0' options
  to maintain backwards  compatibility.
- Improved performance when reading from pipe, although it is
  still recommended to put large amounts of data in files.
- Better error reporting from helper programs.
- Better handling of the INT signal.
- More reliable cleanup.
- Documentation is now in the form of a manpage.


Version 0.5

- Makefiles require GNU make.
- Build process now configures build-time options (currently checks
  only for mallopt()).
- Full output buffering to prevent output interleaving.
- Interrupting execution from within functions is possible.
- Installing system-wide will not break non-compatible shells.
- Licence changed to GPL version 3 or later for prll.sh as well.


Version 0.4

- Job PID and exit code are printed.
- Several tests are now available to check operation.
- Function arguments can be passed via standard input.
- Most dependencies have been dropped.
- Multiple instances of prll can be executed simultaneously.
- On interruption, prll waits for started jobs to finish.
- On interruption, prll returns non-zero exit code.
- BSD and MacOS X compatibility.


Version 0.3.1

- An annoying but non-fatal error message for zsh is fixed.


Version 0.3

- README tracks known issues.
- Graceful termination is done using Ctrl+C.