@@ -22,7 +22,7 @@ prll_seq() {
 
 rm -f manysleep.err
 { prll_seq 5000 ; echo ; } | tr ' ' '\n' | \
-    PRLL_NR_CPUS=500 prll -p -s 'sleep 3; echo Instance $1.' 2> manysleep.err \
+    PRLL_NRJOBS=500 prll -p -s 'sleep 3; echo Instance $1.' 2> manysleep.err \
     | sort | diff -q - manysleep.dat
 if [ $? -ne 0 ] ; then
    echo "Check manysleep.err for errors."
