@@ -5,20 +5,20 @@ SUPPORTED_SHELLS="bash zsh dash"
 slptst() { echo Sleeping $1 seconds.; sleep $1; }
 
 echo 5 1 3 2 4 | tr ' ' '\n' | \
-PRLL_NR_CPUS=1 prll -p slptst | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=1 prll -p slptst | sort | diff -q - sleeps.dat || exit 1
 echo 5 1 3 2 4 | tr ' ' '\n' | \
-PRLL_NR_CPUS=3 prll -p slptst | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=3 prll -p slptst | sort | diff -q - sleeps.dat || exit 1
 echo 5 1 3 2 4 | tr ' ' '\n' | \
-PRLL_NR_CPUS=10 prll -p slptst | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=10 prll -p slptst | sort | diff -q - sleeps.dat || exit 1
 
 echo 5 1 3 2 4 | tr ' \n' '\0' | \
-PRLL_NR_CPUS=1 prll -0 slptst | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=1 prll -0 slptst | sort | diff -q - sleeps.dat || exit 1
 echo 5 1 3 2 4 | tr ' \n' '\0' | \
-PRLL_NR_CPUS=3 prll -0 slptst | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=3 prll -0 slptst | sort | diff -q - sleeps.dat || exit 1
 echo 5 1 3 2 4 | tr ' \n' '\0' | \
-PRLL_NR_CPUS=10 prll -0 slptst | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=10 prll -0 slptst | sort | diff -q - sleeps.dat || exit 1
 
 echo 5 1 3 2 4 | tr ' ' '\n' | \
-PRLL_NR_CPUS=3 prll slptst -p | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=3 prll slptst -p | sort | diff -q - sleeps.dat || exit 1
 echo 5 1 3 2 4 | tr ' \n' '\0' | \
-PRLL_NR_CPUS=3 prll slptst -0 | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=3 prll slptst -0 | sort | diff -q - sleeps.dat || exit 1
