@@ -2,6 +2,6 @@ TEST_DESCRIPTION="A basic sleep test."
 . test_header.sh
 
 slptst() { echo Sleeping $1 seconds.; sleep $1; }
-PRLL_NR_CPUS=1 prll slptst 5 1 3 2 4 | sort | diff -q - sleeps.dat || exit 1
-PRLL_NR_CPUS=3 prll slptst 5 1 3 2 4 | sort | diff -q - sleeps.dat || exit 1
-PRLL_NR_CPUS=10 prll slptst 5 1 3 2 4 | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=1 prll slptst 5 1 3 2 4 | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=3 prll slptst 5 1 3 2 4 | sort | diff -q - sleeps.dat || exit 1
+PRLL_NRJOBS=10 prll slptst 5 1 3 2 4 | sort | diff -q - sleeps.dat || exit 1
