@@ -1,5 +1,5 @@
 TEST_DESCRIPTION="Testing whether passing a string works."
 . test_header.sh
 
-PRLL_NR_CPUS=1 prll -s 'echo Testing control characters. $1| grep control; \
+PRLL_NRJOBS=1 prll -s 'echo Testing control characters. $1| grep control; \
 	       echo $1;' 5 1 3 2 4 | sort | diff -q - string.dat
