@@ -2,6 +2,8 @@ prll NEWS -- history of user-visible changes.
 =============================================
 
 - prll_jobnr user-accessible variable to get the current job's number.
+- The PRLL_NR_CPUS variable is deprecated in favor of PRLL_NRJOBS, but
+  is kept for backwards compatibility.
 
 
 Version 0.6.1
